feat: Added authentication login with tokens using JWT.
